Prepare v0.1.11 release
